# IPC

./: CMakeLists.txt  README.md  build.sh  clang-format.txt
src/client/: client.cpp  client.hpp
src/game/: ticTacToe.cpp
src/lib/: socket_info.hpp  socket_message.hpp
src/server/: server.cpp  server.hpp
src/signalHandler/: signalHandler.cpp
